# OpenEnv-Hackathon

./: .gitignore  IMPLEMENTATION_STATUS.md  Makefile  README.md  client.py  deliverable.md  guide.md  hackathon_requirements.md  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  strategy.md
data/ci_scenarios/: scenario_cascade_001.json  scenario_cascade_002.json  scenario_cascade_003.json  scenario_lint_001.json  scenario_lint_002.json  scenario_lint_003.json  scenario_test_001.json  scenario_test_002.json  scenario_test_003.json
data/sre_scenarios/: scenario_latency_001.json  scenario_latency_002.json  scenario_latency_003.json  scenario_memleak_001.json  scenario_memleak_002.json  scenario_memleak_003.json  scenario_noisy_001.json  scenario_noisy_002.json  scenario_noisy_003.json
server/: __init__.py  app.py  ci_engine.py  environment.py  reward.py  sre_engine.py
tasks/: __init__.py  base.py  registry.py  task_easy.py  task_hard.py  task_medium.py
tasks/ci/: __init__.py  easy_lint_failure.py  hard_cascading_failure.py  medium_test_failure.py
tasks/sre/: __init__.py  easy_noisy_service.py  hard_memory_leak.py  medium_latency_trace.py
tests/: __init__.py  test_ci_engine.py  test_environment.py  test_repo_layout.py  test_repo_scaffold.py  test_reward.py  test_sre_engine.py  test_task_registry.py
